--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="message_partner">#eeeeee</color>
     <color name="message_owner">#0084ff</color>
     <color name="item_one_message_partner_cv">#FFBABABA</color>
+    <color name="title_chat">#4cbab4</color>
 </resources>
