--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,8 @@
     <item name="android:layout_gravity">center</item>
   </style>
 
+  <style name="ToolBarTitle.bold">
+    <item name="android:textStyle">bold</item>
+  </style>
+
 </resources>
