--- a/ipcclib/src/main/res/layout/fragment_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_call.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <de.lespace.apprtc.GestureAreaView
+    <com.viettel.ipcclib.GestureAreaView
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:color="#80000000"
