--- a/ipcclib/src/main/res/values/style.xml
+++ b/ipcclib/src/main/res/values/style.xml
@@ -21,4 +21,18 @@
     <item name="android:layout_gravity">center</item>
   </style>
 
+  <style name="VideoCallItem">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_gravity">center</item>
+  </style>
+
+  <style name="ToolBarTitle.bold">
+    <item name="android:textStyle">bold</item>
+  </style>
+
+  <style name="Icon" parent="@style/VideoCallItem">
+    <item name="android:padding">8dp</item>
+  </style>
+
 </resources>
