--- a/ipcclib/src/main/res/layout/fragment_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_call.xml
@@ -15,6 +15,14 @@
         android:layout_centerVertical="true"
          />
 
+  <com.viettel.ipcclib.videocall.AutoFitTextureView
+      android:id="@+id/video_call_owner_texture"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_alignParentEnd="true"
+      android:layout_centerVertical="true"
+      android:layout_marginEnd="20dp"/>
+
     <TextView
         android:id="@+id/contact_name_call"
         android:layout_width="wrap_content"
