--- a/ipcclib/src/main/res/layout/fragment_video_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_video_call.xml
@@ -4,20 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <de.lespace.apprtc.videocall.AutoFitTextureView
+  <com.viettel.ipcclib.videocall.AutoFitTextureView
       android:id="@+id/texture"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"/>
 
-  <de.lespace.apprtc.videocall.AutoFitTextureView
+  <com.viettel.ipcclib.videocall.AutoFitTextureView
       android:id="@+id/video_call_owner_texture"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_alignParentEnd="true"
       android:layout_centerVertical="true"
       android:layout_marginEnd="20dp"/>
+
+  <!--<com.viettel.ipcclib.PercentFrameLayout-->
+      <!--android:id="@+id/remote_video_layout"-->
+      <!--android:layout_width="match_parent"-->
+      <!--android:layout_height="match_parent">-->
+    <!--<org.webrtc.SurfaceViewRenderer-->
+        <!--android:id="@+id/remote_video_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+  <!--</com.viettel.ipcclib.PercentFrameLayout>-->
 
   <RelativeLayout
       style="@style/ToolBarCommon">
