--- a/ipcclib/src/main/res/layout/small_textureview.xml
+++ b/ipcclib/src/main/res/layout/small_textureview.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
-  <de.lespace.apprtc.videocall.AutoFitTextureView
-      android:id="@+id/video_call_owner_texture"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:layout_marginEnd="20dp"/>
+              android:layout_height="wrap_content">
+    <org.webrtc.SurfaceViewRenderer
+        android:id="@+id/remote_video_view"
+        android:layout_width="100dp"
+        android:layout_height="133dp" />
 </LinearLayout>
