--- a/ipcclib/src/main/res/layout/fragment_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_call.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
 
-    <com.viettel.ipcclib.GestureAreaView
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:color="#80000000"
-
-        android:layout_alignParentLeft="true"
+    <com.viettel.ipcclib.videocall.AutoFitTextureView
+        android:id="@+id/video_call_owner_texture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-         />
-
-  <com.viettel.ipcclib.videocall.AutoFitTextureView
-      android:id="@+id/video_call_owner_texture"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:layout_alignParentEnd="true"
-      android:layout_centerVertical="true"
-      android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp"/>
 
     <TextView
         android:id="@+id/contact_name_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/buttons_call_container"
-        android:textSize="24sp"
-        android:layout_margin="8dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="8dp"
+        android:textSize="24sp"/>
 
     <LinearLayout
-           android:id="@+id/buttons_call_container"
-           android:orientation="horizontal"
-           android:layout_above="@+id/capture_format_text_call"
-           android:layout_alignWithParentIfMissing="true"
-           android:layout_marginBottom="50dp"
-           android:layout_centerHorizontal="true"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content">
+        android:id="@+id/buttons_call_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/capture_format_text_call"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:orientation="horizontal">
 
     </LinearLayout>
 
@@ -48,59 +40,58 @@
         android:id="@+id/capture_format_text_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/capture_format_slider_call"
-        android:textSize="16sp"
-        android:text="Slide to change capture format"/>
+        android:layout_centerHorizontal="true"
+        android:text="Slide to change capture format"
+        android:textSize="16sp"/>
 
     <SeekBar
         android:id="@+id/capture_format_slider_call"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:progress="50"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp" />
+        android:progress="50"/>
 
     <ImageButton
-       android:id="@+id/button_call_scaling_mode"
-       android:contentDescription="@string/disconnect_call"
-       android:layout_width="48dp"
-       android:layout_height="48dp"
+        android:id="@+id/button_call_scaling_mode"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/buttons_call_container"
         android:layout_toEndOf="@+id/button_call_switch_camera"
-  />
+        android:contentDescription="@string/disconnect_call"
+        />
 
     <ImageButton
-       android:id="@+id/button_call_switch_camera"
-       android:background="@android:drawable/ic_menu_camera"
-       android:contentDescription="@string/switch_camera"
+        android:id="@+id/button_call_switch_camera"
         android:layout_width="48dp"
-       android:layout_height="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/buttons_call_container"
-        android:layout_toEndOf="@+id/button_audio_on_off" />
-
+        android:layout_toEndOf="@+id/button_audio_on_off"
+        android:background="@android:drawable/ic_menu_camera"
+        android:contentDescription="@string/switch_camera"/>
 
 
     <ImageButton
         android:id="@+id/button_audio_on_off"
-        android:background="@drawable/ic_micro_phone"
-        android:contentDescription="@string/no_audio"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_above="@+id/buttons_call_container"
-        android:layout_toEndOf="@+id/button_call_disconnect" />
+        android:layout_toEndOf="@+id/button_call_disconnect"
+        android:background="@drawable/ic_micro_phone"
+        android:contentDescription="@string/no_audio"/>
 
     <ImageButton
         android:id="@+id/button_call_disconnect"
-        android:background="@drawable/ic_hang_up"
-        android:contentDescription="@string/disconnect_call"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="58dp"
         android:layout_above="@+id/buttons_call_container"
+        android:layout_marginLeft="58dp"
+        android:background="@drawable/ic_hang_up"
+        android:contentDescription="@string/disconnect_call"
         />
 
 </RelativeLayout>
