--- a/ipcclib/src/main/res/layout/fragment_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_call.xml
@@ -91,6 +91,7 @@
 
     </RelativeLayout>
     <ImageButton
+        android:visibility="gone"
         android:id="@+id/button_call_scaling_mode"
         android:layout_width="wrap_content"
         android:src="@android:drawable/arrow_up_float"
