--- a/ipcclib/src/main/res/layout/small_textureview.xml
+++ b/ipcclib/src/main/res/layout/small_textureview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
@@ -7,4 +7,12 @@
         android:id="@+id/remote_video_view"
         android:layout_width="100dp"
         android:layout_height="133dp" />
-</LinearLayout>
+    <TextView android:layout_width="wrap_content"
+              android:id="@+id/drag_video_show_full_tv"
+              android:layout_centerInParent="true"
+              android:text="@string/drag_video_show_full"
+              android:visibility="gone"
+              android:textStyle="bold"
+              android:textColor="@android:color/white"
+              android:layout_height="wrap_content"/>
+</RelativeLayout>
