--- a/ipcclib/src/main/res/layout/fragment_call.xml
+++ b/ipcclib/src/main/res/layout/fragment_call.xml
@@ -86,7 +86,7 @@
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_centerInParent="true"
-          android:src="@drawable/ic_camera"/>
+          android:src="@drawable/ic_switch_cam"/>
       </RelativeLayout>
 
     </RelativeLayout>
